sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Opportunity_Type__c</fullName>
    <description>Please select the type of Opportunity.</description>
    <inlineHelpText>Select opportunity type</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Add-on/Mod</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Follow-on</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>AM - Account Growth</fullName>
            </value>
            <value>
                <fullName>AM - Renewal</fullName>
            </value>
            <value>
                <fullName>OM - New Agreement</fullName>
            </value>
            <value>
                <fullName>Copied PIF opportunity</fullName>
                <isActive>false</isActive>
                <label>Copied PIF opportunity</label>
            </value>
            <value>
                <fullName>Follow-on work</fullName>
                <isActive>false</isActive>
                <label>Follow-on work</label>
            </value>
            <value>
                <fullName>Modification</fullName>
                <isActive>false</isActive>
                <label>Modification</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>