sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Partner Account</description>
    <inlineHelpText>Lookup to the Partner Account</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>LDGCRM_Partner_Account__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>