sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Recent_Conversations__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Recent_Conversations__c</fullName>
    <description>Recap of the last communication to a lead (who, rough agenda, next steps). Start entries with MM/DD/YY.</description>
    <inlineHelpText>Recap of the last communication to a lead (who, rough agenda, next steps). Start entries with MM/DD/YY.</inlineHelpText>
    <label>Recent Conversations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>