sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Sandbox_URL__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Sandbox_URL__c</fullName>
    <description>URL to the sandbox to see what activity is happening there.</description>
    <inlineHelpText>URL to the sandbox to see what activity is happening there.</inlineHelpText>
    <label>Sandbox URL</label>
    <type>Url</type>
</CustomField>