sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Status__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Status__c</fullName>
    <description>The status of the opportunity as it moves through the pipeline.</description>
    <inlineHelpText>The status of the opportunity as it moves through the pipeline.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not contacted</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Set initial meeting</fullName>
            </value>
            <value>
                <fullName>Initial meeting set</fullName>
            </value>
            <value>
                <fullName>Set meeting</fullName>
            </value>
            <value>
                <fullName>Meeting set</fullName>
            </value>
            <value>
                <fullName>Follow up with contact</fullName>
            </value>
            <value>
                <fullName>Assessing org-level qual</fullName>
            </value>
            <value>
                <fullName>Assessing opp-level qual</fullName>
            </value>
            <value>
                <fullName>Assessing contact-level qual</fullName>
            </value>
            <value>
                <fullName>Assessing</fullName>
            </value>
            <value>
                <fullName>Draft proposal</fullName>
            </value>
            <value>
                <fullName>Proposal drafted</fullName>
            </value>
            <value>
                <fullName>Finalize proposal</fullName>
            </value>
            <value>
                <fullName>Proposal finalized</fullName>
            </value>
            <value>
                <fullName>Proposal sent</fullName>
            </value>
            <value>
                <fullName>Proposal approved</fullName>
            </value>
            <value>
                <fullName>Forms sent</fullName>
            </value>
            <value>
                <fullName>Forms received</fullName>
            </value>
            <value>
                <fullName>Agency signatures in progress</fullName>
            </value>
            <value>
                <fullName>GSA signatures in progress</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Agreements</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Scoped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>