sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Status_Summary_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Status_Summary_Indicator__c</fullName>
    <description>Is the Status Summary up-to-date?</description>
    <formula>AND(
    NOT(ISBLANK(LDGCRM_Status_Summary_Modified_Datetime__c)),
    LDGCRM_Status_Summary_Modified_Datetime__c &lt;
        NOW() -
        CASE(
            TEXT(LDGCRM_Focus_Level__c),
            &quot;Highest&quot;, 30,
            &quot;High&quot;, 60,
            &quot;Backlog (3 month update)&quot;, 90,
            &quot;Backlog (6 month update)&quot;, 180,
            &quot;Backlog (12 month update)&quot;, 365,
            &quot;Developing&quot;, 365,
            30
        )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the Status Summary up-to-date?</inlineHelpText>
    <label>Status Summary Indicator</label>
    <type>Checkbox</type>
</CustomField>