sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Status_Summary_Modified_Datetime__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Status_Summary_Modified_Datetime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Denotes when the Status Summary Field was Last updated</description>
    <label>Status Summary Last Modified Datetime</label>
    <type>DateTime</type>
</CustomField>