sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Summary_URL__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Summary_URL__c</fullName>
    <description>Link to opportunity summary / notes document</description>
    <inlineHelpText>Link to opportunity summary / notes document</inlineHelpText>
    <label>Summary URL</label>
    <type>Url</type>
</CustomField>