sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Technical_Readiness__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Technical_Readiness__c</fullName>
    <description>How ready is this opportunity to move forward technically.</description>
    <inlineHelpText>How ready is this opportunity to move forward technically.</inlineHelpText>
    <label>Technical Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does not have a website</fullName>
            </value>
            <value>
                <fullName>Has a website w/o a sign-in solution</fullName>
            </value>
            <value>
                <fullName>Uses a home-grown sign-in solution</fullName>
            </value>
            <value>
                <fullName>Uses a vendor sign-in solution</fullName>
            </value>
            <value>
                <fullName>Has a broker app, with ability to add multiple vendors</fullName>
            </value>
            <value>
                <fullName>Login.gov is integrated, but not used fully</fullName>
            </value>
            <value>
                <fullName>Login.gov is integrated, fully</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>