sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Tehnical_Checklist_URL__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Tehnical_Checklist_URL__c</fullName>
    <description>URL of the technical checklist filled out by the partner.</description>
    <label>Technical Checklist URL</label>
    <type>Url</type>
</CustomField>