sfdx/force-app/main/default/objects/Opportunity/fields/Lead_Source_s__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_s__c</fullName>
    <description>RITM1169366: Change Lead Source field &quot;Picklist&quot; to &quot;Picklist (Multi-Select)&quot;</description>
    <label>Lead Source(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18F Blog</fullName>
            </value>
            <value>
                <fullName>Acquisition Gateway</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships Outreach</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Digital Content</fullName>
            </value>
            <value>
                <fullName>Direct Customer Inquiry</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Intake email</fullName>
            </value>
            <value>
                <fullName>Marketing email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Phase 0</fullName>
            </value>
            <value>
                <fullName>Product inquiry</fullName>
            </value>
            <value>
                <fullName>Public Relations</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Referral from 18F</fullName>
            </value>
            <value>
                <fullName>Referral from Centers of Excellence</fullName>
            </value>
            <value>
                <fullName>Referral from Login.gov</fullName>
            </value>
            <value>
                <fullName>Referral from Cloud.gov</fullName>
            </value>
            <value>
                <fullName>Referral from Presidential Innovation Fellows</fullName>
            </value>
            <value>
                <fullName>Referral from U.S. Digital Corps</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Seminar - Internal</fullName>
            </value>
            <value>
                <fullName>Seminar - Partner</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>TTS/18F website</fullName>
            </value>
            <value>
                <fullName>TTS Market Intelligence and Analysis</fullName>
                <label>TTS Market Development and Partnerships</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>