sfdx/force-app/main/default/objects/Opportunity/fields/Level_of_Security_Clearance_Required__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Security_Clearance_Required__c</fullName>
    <inlineHelpText>Select security type from list or choose other to enter in other type</inlineHelpText>
    <label>Level of Security Clearance Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Trust</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Secret</fullName>
            </value>
            <value>
                <fullName>Top Secret</fullName>
            </value>
            <value>
                <fullName>TS/SCI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>