sfdx/force-app/main/default/objects/Opportunity/fields/Mark_for_deletion__c.field-meta.xml
<CustomField>
    <fullName>Mark_for_deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please mark this box if the record needs to be deleted.</description>
    <inlineHelpText>Flag this opportunity for an admin to remove (i.e. duplicate opportunity)</inlineHelpText>
    <label>Mark for deletion</label>
    <type>Checkbox</type>
</CustomField>