sfdx/force-app/main/default/objects/Opportunity/fields/MyProgram__c.field-meta.xml
<CustomField>
    <fullName>MyProgram__c</fullName>
    <formula>IF(ISBLANK(TEXT($User.TTS_OTCRM_Program__c)),FALSE,CONTAINS(OpportunityProgramCopy__c,TEXT($User.TTS_OTCRM_Program__c)))</formula>
    <label>My Program?</label>
    <type>Checkbox</type>
</CustomField>