sfdx/force-app/main/default/objects/Opportunity/fields/One_line_project_description__c.field-meta.xml
<CustomField>
    <fullName>One_line_project_description__c</fullName>
    <label>One-line project description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>