sfdx/force-app/main/default/objects/Opportunity/fields/OpportunityProgramCopy__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProgramCopy__c</fullName>
    <label>OpportunityProgramCopy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>