sfdx/force-app/main/default/objects/Opportunity/fields/Other_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Lead_Source__c</fullName>
    <inlineHelpText>Enter other lead source not listed above</inlineHelpText>
    <label>Other Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>