sfdx/force-app/main/default/objects/Opportunity/fields/Other_Level_of_Security_Clearance_Requir__c.field-meta.xml
<CustomField>
    <fullName>Other_Level_of_Security_Clearance_Requir__c</fullName>
    <inlineHelpText>Enter other type of security clearance not listed above</inlineHelpText>
    <label>Other Level of Security Clearance Req&apos;d</label>
    <length>255</length>
    <type>Text</type>
</CustomField>