sfdx/force-app/main/default/objects/Opportunity/fields/Other_TTS_Offering__c.field-meta.xml
<CustomField>
    <fullName>Other_TTS_Offering__c</fullName>
    <label>Other TTS Offering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>