sfdx/force-app/main/default/objects/Opportunity/fields/Other_TTS_Office__c.field-meta.xml
<CustomField>
    <fullName>Other_TTS_Office__c</fullName>
    <inlineHelpText>Enter other TTS office not listed above</inlineHelpText>
    <label>Other TTS Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>