sfdx/force-app/main/default/objects/Opportunity/fields/Other_Type_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Other_Type_of_Contract__c</fullName>
    <inlineHelpText>Enter in other contract type</inlineHelpText>
    <label>Other Type of Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>