sfdx/force-app/main/default/objects/Opportunity/fields/Period_of_Performance_End__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Performance_End__c</fullName>
    <label>Period of Performance End</label>
    <type>Date</type>
</CustomField>