sfdx/force-app/main/default/objects/Opportunity/fields/Period_of_Performance_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Performance_Start__c</fullName>
    <label>Period of Performance Start</label>
    <type>Date</type>
</CustomField>