sfdx/force-app/main/default/objects/Opportunity/fields/Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model__c</fullName>
    <description>Originally created for TTS OTCRM - Login.gov Opportunities</description>
    <label>Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>