sfdx/force-app/main/default/objects/Opportunity/fields/Primary_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Customer Contact</description>
    <inlineHelpText>First and last name of primary contact</inlineHelpText>
    <label>Primary Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>