sfdx/force-app/main/default/objects/Opportunity/fields/priority_type__c.field-meta.xml
<CustomField>
    <fullName>priority_type__c</fullName>
    <description>Explains why an opportunity is a priority</description>
    <inlineHelpText>Explains why an opportunity is a priority.</inlineHelpText>
    <label>Priority Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HISP - High Volume, HISP - Lower Volume, Volume, Strategic, IDV Upgrade, Leadership Escalation</fullName>
            </value>
            <value>
                <fullName>HISP - High Volume</fullName>
            </value>
            <value>
                <fullName>HISP - Lower Volume</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>IdV Upgrade</fullName>
            </value>
            <value>
                <fullName>Leadership Escalation</fullName>
            </value>
            <value>
                <fullName>High Volume</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>