sfdx/force-app/main/default/objects/Opportunity/fields/Project_brief__c.field-meta.xml
<CustomField>
    <fullName>Project_brief__c</fullName>
    <label>Project brief</label>
    <type>Url</type>
</CustomField>