sfdx/force-app/main/default/objects/Opportunity/fields/Requested_of_product_managers__c.field-meta.xml
<CustomField>
    <fullName>Requested_of_product_managers__c</fullName>
    <label>Requested # of product managers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>