sfdx/force-app/main/default/objects/Opportunity/fields/Requested_of_software_engineers__c.field-meta.xml
<CustomField>
    <fullName>Requested_of_software_engineers__c</fullName>
    <label>Requested # of software engineers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>