sfdx/force-app/main/default/objects/Opportunity/fields/Required_Information_Form__c.field-meta.xml
<CustomField>
    <fullName>Required_Information_Form__c</fullName>
    <label>Required Information Form</label>
    <type>Url</type>
</CustomField>