sfdx/force-app/main/default/objects/Opportunity/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>Originally created for TTS OTCRM - Login.gov Opportunities</description>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IdV</fullName>
            </value>
            <value>
                <fullName>Authentication Only</fullName>
            </value>
            <value>
                <fullName>IAL1</fullName>
                <isActive>false</isActive>
                <label>IAL1</label>
            </value>
            <value>
                <fullName>IAL2</fullName>
                <isActive>false</isActive>
                <label>IAL2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>