sfdx/force-app/main/default/objects/Opportunity/fields/Set_of_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Set_of_Capabilities__c</fullName>
    <inlineHelpText>Select capability this opportunity brings</inlineHelpText>
    <label>Capabilities Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Artificial Intelligence / RPA</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Data &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Infrastructure Optimization</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Software Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>