sfdx/force-app/main/default/objects/Opportunity/fields/Skills_required__c.field-meta.xml
<CustomField>
    <fullName>Skills_required__c</fullName>
    <label>Skills required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>