sfdx/force-app/main/default/objects/Opportunity/fields/Source_Detail_Formula__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail_Formula__c</fullName>
    <formula>IF(
!ISBLANK(TEXT( Source_Detail_Inquiry__c )), TEXT( Source_Detail_Inquiry__c ),
IF(
!ISBLANK( Source_Detail_Referral__c ), Source_Detail_Referral__r.FirstName &amp; &apos; &apos; &amp; Source_Detail_Referral__r.LastName,
IF(
!ISBLANK( Source_Detail_Text__c ), Source_Detail_Text__c,
IF(
!ISBLANK( Source_Detail_URL__c ), Source_Detail_URL__c , NULL
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Detail</label>
    <type>Text</type>
</CustomField>