sfdx/force-app/main/default/objects/Opportunity/fields/Source_Detail_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail_Inquiry__c</fullName>
    <label>Source Detail (Inquiry)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>