sfdx/force-app/main/default/objects/Opportunity/fields/Source_Detail_Referral__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Detail (Referral)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Source Detail (Referral))</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>