sfdx/force-app/main/default/objects/Opportunity/fields/Source_Detail_Text__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail_Text__c</fullName>
    <label>Source Detail (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>