sfdx/force-app/main/default/objects/Opportunity/fields/Source_Detail_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail_URL__c</fullName>
    <label>Source Detail (URL)</label>
    <type>Url</type>
</CustomField>