sfdx/force-app/main/default/objects/Opportunity/fields/Sourced_By__c.field-meta.xml
<CustomField>
    <fullName>Sourced_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourced By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>