sfdx/force-app/main/default/objects/Opportunity/fields/Statement_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Work__c</fullName>
    <label>Statement of Work</label>
    <type>Url</type>
</CustomField>