sfdx/force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not contacted</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Set initial meeting</fullName>
            </value>
            <value>
                <fullName>Initial meeting set</fullName>
            </value>
            <value>
                <fullName>Set meeting</fullName>
            </value>
            <value>
                <fullName>Meeting set</fullName>
            </value>
            <value>
                <fullName>Follow up with contact</fullName>
            </value>
            <value>
                <fullName>Assessing org-level qual</fullName>
            </value>
            <value>
                <fullName>Assessing opp-level qual</fullName>
            </value>
            <value>
                <fullName>Assessing contact-level qual</fullName>
            </value>
            <value>
                <fullName>Assessing</fullName>
            </value>
            <value>
                <fullName>Draft proposal</fullName>
            </value>
            <value>
                <fullName>Proposal drafted</fullName>
            </value>
            <value>
                <fullName>Finalize proposal</fullName>
            </value>
            <value>
                <fullName>Proposal finalized</fullName>
            </value>
            <value>
                <fullName>Proposal sent</fullName>
            </value>
            <value>
                <fullName>Proposal approved</fullName>
            </value>
            <value>
                <fullName>Forms sent</fullName>
            </value>
            <value>
                <fullName>Forms received</fullName>
            </value>
            <value>
                <fullName>Agency signatures in progress</fullName>
            </value>
            <value>
                <fullName>GSA signatures in progress</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>