sfdx/force-app/main/default/objects/Opportunity/fields/Team_description__c.field-meta.xml
<CustomField>
    <fullName>Team_description__c</fullName>
    <label>Team description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>