sfdx/force-app/main/default/objects/Opportunity/fields/Telework_policy__c.field-meta.xml
<CustomField>
    <fullName>Telework_policy__c</fullName>
    <label>Telework policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>In person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>